Added antiforgery token and model binding

--- a/Showtimes/Views/Schedule/Edit.cshtml
+++ b/Showtimes/Views/Schedule/Edit.cshtml
@@ -10,6 +10,7 @@
 
 @using (Html.BeginForm())
 {
+    @Html.AntiForgeryToken()
     <table>
         <tr>
             <td>@Html.LabelFor(_ => _.MovieTheaterId, "Кинотеатр")</td>
