--- a/Showtimes/Views/Schedule/Index.cshtml
+++ b/Showtimes/Views/Schedule/Index.cshtml
@@ -14,7 +14,7 @@
         @Html.LabelFor(_ => _.Date, "Дата")
         <span>&nbsp;</span>@Html.EditorFor(_ => _.Date)
         <span>&nbsp;</span><input type = "submit" value = "Показать" />
-        <span>&nbsp;</span><button type="button">@Html.ActionLink("Добавить", "Create", "Schedule")</button>
+        <span>&nbsp;</span><button type="button">@Html.ActionLink("Добавить", "Edit", "Schedule", new { movieTheaterId = 0, movieId = 0, date = Model.Date.ToString(Showtimes.Controllers.Constants.UrlDateFormat) }, null)</button>
     }
 </div>
 <br />
@@ -31,7 +31,7 @@
                 <td width="200">@m.Key.Title</td>
                 <td witdh="200" align="left">@string.Join(", ", m.Select(_ => _.SessionTime.ToString("t")))</td>
                 <td style="padding-left: 20px">@Html.ActionLink("Редактировать", "Edit", "Schedule",
-                                              new { movieTheaterId = @t.Key.MovieTheaterId, movieId = @m.Key.MovieId, date = Model.Date.ToString("yyyy-MM-dd") }, null)</td>
+                                              new { movieTheaterId = @t.Key.MovieTheaterId, movieId = @m.Key.MovieId, date = Model.Date.ToString(Showtimes.Controllers.Constants.UrlDateFormat) }, null)</td>
             </tr>
         }
     }
